--- a/src/styles/revertMagento.scss
+++ b/src/styles/revertMagento.scss
@@ -1,8 +1,24 @@
 html {
-  a:visited {
-    @apply text-[initial];
-  }
   ul > li {
     @apply mb-0;
+  }
+}
+
+.widget.block.block-static-block,
+.category-nav {
+  a {
+    @apply text-inherit;
+
+    &:visited,
+    &:active,
+    &:hover {
+      @apply text-inherit;
+    }
+  }
+
+  ul > li:hover {
+    & > a {
+      @apply text-blue-500;
+    }
   }
 }
