--- a/src/styles/revertMagento.scss
+++ b/src/styles/revertMagento.scss
@@ -4,8 +4,14 @@ html {
     @apply mb-0;
   }
 
-  p {
-    @apply mb-0;
+  p,
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    @apply m-0;
   }
 }
 
